# Sorty2

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  plan.txt  tsconfig.json
src/database/: database.ts
src/desktop/: backendinit.ts  desktop.ts  overlay.ts  preload.ts  tsconfig.preload.json
src/frontend/: README.md  package-lock.json
src/frontend/src/: app.d.ts
src/frontend/src/lib/: PlaybackStore.svelte.ts
src/frontend/src/routes/: +page.svelte
src/librespot/: Cargo.toml
src/player/: librespot.ts
src/player/events/: Cargo.toml  onevent.rs
src/server/: bridge.ts  errors.ts  middleware.ts  server.ts  socket.ts
src/server/routes/: auth.ts  index.ts  player.ts  playlists.ts  settings.ts  themes.ts
src/spotify/: spotify.ts  spotifyauth.ts
src/types/: types.ts
src/utils/: appconfig.ts  bridge.ts  librespot.ts  pkce.ts  spotify.ts  spotifyauth.ts
types/: session.d.ts
